// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpHeadersValidator validate() spec is present header is not present spec defines it as required returns validation error 1`] = `
Array [
  Object {
    "message": "Missing aHeader header param",
    "name": "required",
    "path": Array [
      "header",
      "aHeader",
    ],
    "severity": "error",
    "summary": "",
  },
]
`;

exports[`HttpHeadersValidator validate() spec is present header is present deprecated flag is set returns deprecation warning 1`] = `
Array [
  Object {
    "message": "Header param x-test-header is deprecated",
    "name": "deprecated",
    "path": Array [
      "header",
      "x-test-header",
    ],
    "severity": "warn",
    "summary": "",
  },
]
`;

exports[`HttpHeadersValidator validate() spec is present header is present mediaType is provided specific mediaType found in spec content list validates against more specific spec 1`] = `
Array [
  Object {
    "message": "should be number",
    "name": "type",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should be number",
  },
]
`;

exports[`HttpHeadersValidator validate() spec is present header is present mediaType is provided specific mediaType not found in spec content list validates against default spec 1`] = `Array []`;

exports[`HttpHeadersValidator validate() spec is present header is present schema is present deserializer is available header is not valid not validates against schema 1`] = `
Array [
  Object {
    "message": "should be number",
    "name": "type",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should be number",
  },
]
`;
